--- a/src/main/webapp/top.html
+++ b/src/main/webapp/top.html
@@ -5,14 +5,17 @@
     <title>Title</title>
 </head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <body>
 查看余额：<button id="yue" onclick="get()">查询</button>
 您的余额 <input id="money">
 </body>
 <script>
-    function get(){
-     $.ajax({
-      url:'hello'})
-    }
+
 </script>
 </html>
+<!--
+
+http://localhost:8080/top.html
+
+-->
